fix the about page by wraping the text

--- a/cls/src/components/hero/hero.css
+++ b/cls/src/components/hero/hero.css
@@ -24,3 +24,14 @@
   width: 80%;
   text-align: start;
 }
+
+@media (max-width: 930px) {
+  .hero-container {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .hero-container .hero-text {
+    width: 100%;
+  }
+}
